Fix homepage sport link text alignment on touch devices

--- a/_/css/components/_homepage.scss
+++ b/_/css/components/_homepage.scss
@@ -13,6 +13,7 @@
   }
 
   .sli-text {
+    @include vendorize(transform, translateY(-65%));
     left: 0;
     position: absolute;
     text-align: center;
